create post , mock login , add role to user
