# Modules/User/routes/api.php
@@ -1,7 +1,7 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
-use Modules\Post\Http\Controllers\PostController;
+use Modules\User\Http\Controllers\AuthController;
 use Modules\User\Http\Controllers\UserController;
 
 Route::middleware(['auth:sanctum'])->prefix('v1')->group(function () {
@@ -14,7 +14,5 @@ Route::prefix('users')->controller(UserController::class)->group(function () {
     Route::get('/{user}', 'show');
 });
 
-Route::prefix('posts')->controller(PostController::class)->group(function () {
-    Route::post('', 'store')->middleware('auth:sanctum');
-    Route::delete('/{post}', 'destroy');
-});
+Route::post('/mock-login', [AuthController::class, 'mockLogin']);
+
